--- a/app/src/pages/article/style.scss
+++ b/app/src/pages/article/style.scss
@@ -1,2 +1,52 @@
 @import "src/styles/vars";
 
+.article {
+  padding-bottom: 100px;
+
+  &__inner {
+    display: flex;
+    margin-bottom: 70px;
+
+    &-content {
+      width: 820px;
+      margin-left: 80px;
+
+      &__title {
+        @include h2;
+        color: $brown;
+        margin-bottom: 20px;
+      }
+
+      img {
+        margin-bottom: 40px;
+      }
+
+      &__info {
+        padding-bottom: 60px;
+
+        .title {
+          @include h3;
+          text-transform: uppercase;
+          color: $brown;
+          margin-bottom: 20px;
+        }
+
+        .text {
+          font-size: 16px;
+          line-height: 24px;
+          color: #292929;
+        }
+      }
+
+      &__advices {
+
+        .title {
+          @include h3;
+          text-transform: uppercase;
+          color: $brown;
+          margin-bottom: 20px;
+        }
+      }
+    }
+  }
+}
