--- a/app/src/pages/product-card/style.scss
+++ b/app/src/pages/product-card/style.scss
@@ -92,6 +92,33 @@
           background: #FFFFFF;
           border-radius: 8px;
           padding: 20px 20px 15px 20px;
+
+          &-main {
+
+          }
+
+          &-group {
+            display: flex;
+            justify-content: center;
+            margin-bottom: 15px;
+
+            img + img {
+              margin-left: 10px;
+            }
+          }
+
+          &-360__view {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            font-size: 14px;
+            line-height: 20px;
+            color: $darkGrey;
+
+            svg {
+              margin-right: 8px;
+            }
+          }
         }
 
         &__info {
@@ -253,6 +280,104 @@
 
               svg {
                 margin-right: 6px;
+              }
+            }
+          }
+        }
+      }
+
+      .tabs {
+
+        &__titles {
+          display: flex;
+
+          &-title {
+            padding: 16px 40px;
+            font-weight: 600;
+            font-size: 16px;
+            line-height: 24px;
+            text-align: center;
+            color: $brown;
+            border: none;
+            background-color: transparent;
+            cursor: pointer;
+            border-bottom: 2px solid transparent;
+
+            &.active {
+              border-bottom: 2px solid $orange;
+            }
+          }
+        }
+
+        &__items {
+
+          &-description {
+            padding: 20px 30px 4px 30px;
+            background-color: #fff;
+            border-radius: 8px;
+            display: none;
+
+            &__text {
+              font-size: 14px;
+              line-height: 22px;
+              margin-bottom: 16px;
+            }
+
+            &__rows {
+
+              .row {
+                border-top: 1px solid $lightGrey;
+                display: flex;
+                padding: 16px 0;
+
+                &__title {
+                  width: 220px;
+                  margin-right: 20px;
+                  font-weight: 600;
+                  font-size: 14px;
+                  line-height: 22px;
+                }
+              }
+            }
+
+            &.active {
+              display: block;
+            }
+          }
+
+          &-deliveryPayment {
+            padding: 30px 30px 20px 30px;
+            background: #FFFFFF;
+            border-radius: 8px;
+            display: none;
+
+            &.active {
+              display: block;
+            }
+
+            &__title {
+              font-weight: 700;
+              font-size: 16px;
+              line-height: 24px;
+              color: $brown;
+              margin-bottom: 20px;
+            }
+
+            &__rows {
+
+              .row {
+                border-top: 1px solid $lightGrey;
+                padding: 20px 0;
+                display: flex;
+
+                &__title {
+                  width: 220px;
+                  margin-right: 20px;
+                }
+
+                &__text {
+                  width: 570px;
+                }
               }
             }
           }
