--- a/app/src/pages/category/style.scss
+++ b/app/src/pages/category/style.scss
@@ -2,18 +2,87 @@
 
 .category {
 
+  &__top {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 30px;
+
+    &-title {
+      @include h2;
+      color: $brown;
+    }
+
+    &-filter__toggle {
+      display: flex;
+      align-items: center;
+      border-radius: 5px;
+      border: 1px solid #292929;
+      background-color: transparent;
+      padding: 10px 20px 10px 12px;
+      font-size: 16px;
+      line-height: 24px;
+      cursor: pointer;
+      width: 144px;
+
+      &.active {
+        color: $white;
+        background-color: $brown;
+      }
+
+      svg {
+        margin-right: 24px;
+      }
+    }
+  }
+
+  &__filters {
+    background: rgba(253, 147, 57, 0.1);
+    border: 1px solid rgba(253, 147, 57, 0.2);
+    border-radius: 5px;
+    padding: 16px 20px 16px 30px;
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 30px;
+
+    &-list {
+      display: flex;
+
+      &__filter + &__filter {
+        margin-left: 30px;
+      }
+
+      &__filter {
+
+        .title {
+          font-size: 16px;
+          line-height: 24px;
+          display: flex;
+          align-items: center;
+
+          svg {
+            margin-left: 9px;
+          }
+        }
+
+        .dropdown-list {
+
+        }
+      }
+    }
+
+    &-is__available {
+      display: flex;
+      align-items: center;
+    }
+  }
+
   &__inner {
     display: flex;
 
     &-content {
       width: 880px;
       margin-left: 20px;
-
-      &__title {
-        @include h2;
-        color: $brown;
-        margin-bottom: 30px;
-      }
 
       &__list {
         display: flex;
