--- a/app/src/components/main-nav/style.scss
+++ b/app/src/components/main-nav/style.scss
@@ -1,9 +1,5 @@
 @import "src/styles/vars";
 
-.wrapper-nav {
-
-}
-
 .link__arrow-right {
   position: absolute;
   top: 18px;
@@ -42,6 +38,38 @@
     &-link {
       padding: 12px 0 12px 16px;
       position: relative;
+
+      &:hover {
+        .nav__ingredients-link__dropdown {
+          display: block;
+        }
+      }
+
+      &__dropdown {
+        position: absolute;
+        background: #FFFFFF;
+        border: 1px solid #E7E7E7;
+        box-shadow: 0 2px 12px rgba(102, 79, 0, 0.09);
+        border-radius: 5px;
+        z-index: 1000;
+        cursor: pointer;
+        top: -75px;
+        right: -225px;
+        transition: all .4s;
+        display: none;
+
+        .dropdown-link {
+          padding: 10px 16px;
+          font-size: 16px;
+          line-height: 24px;
+          transition: all .4s;
+
+          &:hover {
+            color: $orange;
+            background: #FFF1DB;
+          }
+        }
+      }
 
       & + & {
         border-top: 1px solid #E6E6E6;;
