--- a/app/src/pages/reviews/style.scss
+++ b/app/src/pages/reviews/style.scss
@@ -29,6 +29,23 @@
       display: flex;
       align-items: center;
 
+      button {
+        background-color: transparent;
+        border: none;
+        display: flex;
+        align-items: center;
+        margin-left: 10px;
+        cursor: pointer;
+        font-size: 16px;
+        line-height: 24px;
+        text-decoration-line: underline;
+        color: $orange;
+
+        .user-icon {
+          margin-right: 6px;
+        }
+      }
+
       a {
         font-size: 16px;
         line-height: 24px;
