udpated styles in modal windows

--- a/app/src/components/modals/choose-product/style.scss
+++ b/app/src/components/modals/choose-product/style.scss
@@ -1,9 +1,16 @@
 @import "src/styles/vars";
 
 .choose-product__wrapper {
-  margin: 0 auto;
+  position: fixed;
+  left: 0;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0,0,0, .5);
   display: flex;
+  align-items: center;
   justify-content: center;
+  z-index: 100;
 }
 
 .choose-product {
