--- a/app/src/blocks/footer/style.scss
+++ b/app/src/blocks/footer/style.scss
@@ -1,10 +1,16 @@
 @import "../../styles/vars";
 
+.footer__outer {
+  background-color: $white;
+  padding: 60px 0;
+}
+
 .footer {
   display: flex;
   justify-content: space-between;
-  padding: 60px 250px;
-  background-color: $white;
+  max-width: 1180px;
+  padding: 0 15px;
+  width: 100%;
 
   &__copyright {
     max-width: 210px;
@@ -76,6 +82,60 @@
       margin-top: 65px;
       display: flex;
       justify-content: space-between;
+    }
+  }
+}
+
+@media (max-width: 1000px) {
+  .footer {
+    flex-wrap: wrap;
+
+    &__copyright,
+    &__company,
+    &__support,
+    &__payment-methods,
+    &__info {
+      margin-top: 20px;
+    }
+  }
+}
+
+@media (max-width: 800px) {
+  .footer {
+    flex-wrap: wrap;
+
+    &__copyright,
+    &__company,
+    &__support,
+    &__payment-methods,
+    &__info {
+      max-width: 220px;
+      width: 100%;
+    }
+  }
+}
+
+@media (max-width: 490px) {
+  .footer {
+    justify-content: center;
+
+    &__copyright,
+    &__company,
+    &__support,
+    &__payment-methods,
+    &__info {
+      margin-top: 30px;
+      text-align: center;
+    }
+
+    &__info {
+
+      &-address {
+
+        &__line {
+          justify-content: center;
+        }
+      }
     }
   }
 }
