--- a/src/pages/collections/style.scss
+++ b/src/pages/collections/style.scss
@@ -56,6 +56,7 @@
 
       &__image {
         margin-bottom: 16px;
+        width: 100%;
       }
 
       &__title {
@@ -76,6 +77,7 @@
       &__bottom {
         display: flex;
         justify-content: space-between;
+        align-items: center;
 
         .price {
           font-size: 22px;
