excluded data from markup and updated styles in products block

--- a/src/blocks/products/style.scss
+++ b/src/blocks/products/style.scss
@@ -53,8 +53,7 @@
             &-row {
               display: flex;
               flex-wrap: wrap;
-              justify-content: space-between;
-              margin-top: 16px;
+              gap: 16px;
             }
           }
         }
