--- a/src/components/counter/style.scss
+++ b/src/components/counter/style.scss
@@ -1,4 +1,4 @@
-@import "src/styles/vars";
+ @import "src/styles/vars";
 
 .counter {
 
@@ -17,6 +17,7 @@
       align-items: center;
       text-align: center;
       justify-content: center;
+      background-color: #fff;
 
       &.minus,
       &.number {
