--- a/src/components/products-slider/style.scss
+++ b/src/components/products-slider/style.scss
@@ -2,7 +2,7 @@
 
 .products-slider {
   max-width: 1180px;
-  padding-bottom: 100px;
+  padding: 0 15px 100px 15px;
 
   &__title {
     font-weight: 700;
@@ -21,5 +21,41 @@
     left: auto;
     right: 55px;
     top: -52px;
+  }
+}
+
+@media (max-width: 1200px) {
+  .products-slider {
+    max-width: 1000px;
+  }
+}
+
+@media (max-width: 1000px) {
+  .products-slider {
+    max-width: 900px;
+  }
+}
+
+@media (max-width: 900px) {
+  .products-slider {
+    max-width: 715px;
+  }
+}
+
+@media (max-width: 715px) {
+  .products-slider {
+    max-width: 685px;
+  }
+}
+
+@media (max-width: 670px) {
+  .products-slider {
+    max-width: 485px;
+  }
+}
+
+@media (max-width: 480px) {
+  .products-slider {
+    max-width: 300px;
   }
 }
