--- a/src/pages/recipe/style.scss
+++ b/src/pages/recipe/style.scss
@@ -8,7 +8,7 @@
     padding-bottom: 60px;
 
     &-content {
-      width: 820px;
+      max-width: 820px;
       margin-left: 80px;
 
       .description {
