--- a/src/pages/article/style.scss
+++ b/src/pages/article/style.scss
@@ -8,7 +8,7 @@
     margin-bottom: 70px;
 
     &-content {
-      width: 820px;
+      max-width: 820px;
       margin-left: 80px;
 
       &__title {
@@ -19,6 +19,7 @@
 
       img {
         margin-bottom: 40px;
+        width: 100%;
       }
 
       &__info {
@@ -46,6 +47,90 @@
           color: $brown;
           margin-bottom: 20px;
         }
+      }
+    }
+  }
+}
+
+@media (max-width: 1200px) {
+  .article {
+    &__inner {
+      justify-content: center;
+
+      &-content {
+        margin-left: 0;
+      }
+    }
+  }
+}
+
+@media (max-width: 850px) {
+  .article {
+    &__inner {
+      &-content {
+        max-width: 700px;
+      }
+    }
+  }
+}
+
+@media (max-width: 730px) {
+  .article {
+    &__inner {
+      &-content {
+        max-width: 600px;
+
+        &__title {
+          font-size: 22px;
+          line-height: 34px;
+        }
+      }
+    }
+  }
+}
+
+@media (max-width: 635px) {
+  .article {
+    &__inner {
+      &-content {
+        max-width: 500px;
+
+        &__title {
+          font-size: 20px;
+          line-height: 30px;
+        }
+      }
+    }
+  }
+}
+
+@media (max-width: 525px) {
+  .article {
+    &__inner {
+      &-content {
+        max-width: 400px;
+
+        &__title {
+          font-size: 20px;
+          line-height: 30px;
+        }
+
+        &__advices {
+
+          .title {
+            font-size: 22px;
+          }
+        }
+      }
+    }
+  }
+}
+
+@media (max-width: 440px) {
+  .article {
+    &__inner {
+      &-content {
+        max-width: 300px;
       }
     }
   }
