--- a/src/pages/delivery/style.scss
+++ b/src/pages/delivery/style.scss
@@ -143,3 +143,46 @@
     }
   }
 }
+
+.payment-method {
+  background: $white;
+  border: 1px solid #E7E7E7;
+  border-radius: 5px;
+  padding: 20px 20px 34px;
+  max-width: 260px;
+
+  & + & {
+    margin-left: 20px;
+  }
+
+  &__image {
+    width: 60px;
+    height: 60px;
+    border-radius: 50%;
+    background-color: $orange;
+    margin-bottom: 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    img {
+      width: 30px;
+      height: 30px;
+    }
+  }
+
+  &__title {
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 26px;
+    color: $brown;
+    margin-bottom: 6px;
+  }
+
+  &__text {
+    font-weight: 600;
+    font-size: 15px;
+    line-height: 24px;
+    color: $darkGrey;
+  }
+}
