--- a/src/pages/delivery/style.scss
+++ b/src/pages/delivery/style.scss
@@ -16,6 +16,7 @@
 
   &__title {
     @include h2;
+    color: $brown;
     padding-bottom: 30px;
     border-bottom: 1px solid rgba($darkGrey, .3);
     margin-bottom: 30px;
@@ -31,8 +32,10 @@
 
     &-methods {
       display: flex;
+      flex-wrap: wrap;
       padding-bottom: 40px;
       border-bottom: 1px solid rgba($darkGrey, .3);
+      gap: 20px;
     }
   }
 
@@ -154,10 +157,6 @@
   padding: 20px 20px 34px;
   max-width: 260px;
 
-  & + & {
-    margin-left: 20px;
-  }
-
   &__image {
     width: 60px;
     height: 60px;
@@ -187,5 +186,59 @@
     font-size: 15px;
     line-height: 24px;
     color: $darkGrey;
+  }
+}
+
+@media (max-width: 1200px) {
+  .delivery__table {
+    display: none;
+  }
+
+  .delivery__inner-content {
+    margin-left: 0;
+    padding: 0 15px;
+  }
+
+  .delivery__payment-methods {
+    justify-content: center;
+  }
+}
+
+@media (max-width: 850px) {
+  .delivery__methods {
+    img {
+      width: 300px;
+      height: 225px;
+    }
+  }
+}
+
+@media (max-width: 740px) {
+  .delivery__title {
+    padding-bottom: 10px;
+  }
+
+  .delivery__title {
+    margin-bottom: 0;
+  }
+
+  .delivery__payment {
+    padding-top: 20px;
+  }
+
+  .delivery__methods {
+
+    &-method + &-method {
+      margin-top: 0;
+    }
+
+    &-method {
+      flex-wrap: wrap;
+      justify-content: center;
+
+      img {
+        margin: 15px 0;
+      }
+    }
   }
 }
