--- a/src/pages/reviews/style.scss
+++ b/src/pages/reviews/style.scss
@@ -6,7 +6,7 @@
     display: flex;
 
     &-content {
-      width: 820px;
+      max-width: 820px;
       margin-left: 80px;
       padding-bottom: 100px;
     }
@@ -15,6 +15,7 @@
   &__top {
     display: flex;
     justify-content: space-between;
+    flex-wrap: wrap;
     color: $brown;
     margin-bottom: 10px;
 
@@ -66,5 +67,80 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
+    gap: 20px;
+  }
+}
+
+.review {
+  padding: 24px 20px 20px 20px;
+  background: $white;
+  border: 1px solid #E6E6E6;
+  border-radius: 5px;
+  max-width: 400px;
+
+  &__top {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 16px;
+
+    .user {
+
+      &__name {
+        font-size: 16px;
+        line-height: 20px;
+        color: $brown;
+      }
+
+      &__city {
+        font-size: 15px;
+        line-height: 20px;
+        color: $darkGrey;
+      }
+    }
+  }
+
+  &__text {
+    font-size: 15px;
+    line-height: 24px;
+    margin-bottom: 16px;
+  }
+
+  &__images {
+    margin-bottom: 16px;
+
+    img {
+      width: 60px;
+      height: 60px;
+    }
+
+    img + img {
+      margin-left: 10px;
+    }
+  }
+
+  &__date {
+    font-size: 14px;
+    line-height: 24px;
+    color: $darkGrey;
+  }
+}
+
+@media (max-width: 1200px) {
+  .reviews__inner-content {
+    margin-left: 0;
+    padding: 0 15px;
+  }
+}
+
+@media (max-width: 860px) {
+  .reviews__list,
+  .reviews__top {
+    justify-content: center;
+  }
+
+  .reviews__top {
+    &-title {
+      font-size: 27px;
+    }
   }
 }
