added adaptive for qa page

--- a/src/pages/qa/style.scss
+++ b/src/pages/qa/style.scss
@@ -55,3 +55,14 @@
     }
   }
 }
+
+@media (max-width: 1200px) {
+  .qa {
+    &__inner {
+      &-content {
+        margin-left: 0;
+        padding: 0 15px;
+      }
+    }
+  }
+}
