--- a/src/pages/calculator/style.scss
+++ b/src/pages/calculator/style.scss
@@ -7,7 +7,7 @@
     display: flex;
 
     &-content {
-      width: 820px;
+      max-width: 820px;
       margin-left: 80px;
     }
   }
@@ -133,6 +133,40 @@
             top: 0;
           }
         }
+      }
+    }
+  }
+}
+
+@media (max-width: 1200px) {
+  .calculator {
+    &__inner {
+      &-content {
+        margin-left: 0;
+        padding: 0 15px;
+      }
+    }
+  }
+}
+
+@media (max-width: 780px) {
+  .calculator {
+    &__title {
+      text-align: center;
+    }
+
+    &__box {
+      flex-wrap: wrap;
+      justify-content: center;
+
+      &-calculations {
+        max-width: 338px;
+        margin-right: 0;
+        margin-bottom: 20px;
+      }
+
+      &-calculations {
+        max-width: 398px;
       }
     }
   }
