--- a/src/pages/ about/style.scss
+++ b/src/pages/ about/style.scss
@@ -19,12 +19,14 @@
 
         .info {
           display: flex;
+          flex-wrap: wrap;
           padding-bottom: 40px;
           margin-bottom: 50px;
           border-bottom: 1px solid rgba($darkGrey, .3);
+          width: 100%;
 
           &__box {
-            width: 380px;
+            max-width: 380px;
             margin-right: 40px;
 
             &-title {
@@ -63,7 +65,8 @@
 
         .masters {
           display: flex;
-          justify-content: space-between;
+          flex-wrap: wrap;
+          gap: 20px;
         }
       }
 
@@ -74,13 +77,13 @@
           @include h2;
           text-transform: uppercase;
           color: $brown;
-          margin-bottom: 10px;
+          margin-bottom: 20px;
         }
 
         .advantages {
           display: flex;
           flex-wrap: wrap;
-          justify-content: space-between;
+          gap: 20px;
         }
       }
     }
@@ -130,15 +133,12 @@
     padding-bottom: 100px;
 
     &-client {
-      width: 830px;
+      max-width: 830px;
+      width: 100%;
       position: relative;
       background: #FEE9A5;
       padding: 94px 102px 66px 250px;
       margin-right: 20px;
-
-      &::before {
-        
-      }
 
       &__title {
         @include h2;
@@ -173,7 +173,8 @@
     }
 
     &-result {
-      width: 830px;
+      max-width: 830px;
+      width: 100%;
       background: #D2D2D3;
       padding: 94px 283px 224px 80px;
       position: relative;
@@ -190,6 +191,101 @@
         line-height: 24px;
         color: #808080;
         width: 283px;
+      }
+    }
+  }
+}
+
+@media (max-width: 1690px) {
+  .about {
+    &__box {
+      margin: 0 15px;
+      flex-wrap: wrap;
+      justify-content: center;
+
+      &-client {
+        margin: 0 0 25px;
+      }
+    }
+  }
+}
+
+@media (max-width: 1200px) {
+  .about {
+    &__inner {
+      &-content {
+        margin: 0 15px;
+
+        &__company {
+          .title {
+            text-align: center;
+          }
+        }
+      }
+    }
+  }
+}
+
+@media (max-width: 870px) {
+  .about {
+    &__inner {
+      &-content {
+        &__company {
+          .title {
+            margin-bottom: 10px;
+          }
+
+          .info {
+            justify-content: center;
+
+            &__box {
+              margin: 0 0 20px 0;
+
+              &-title {
+                text-align: center;
+              }
+            }
+          }
+        }
+
+        &__masters {
+          .masters {
+            justify-content: center;
+          }
+
+          .title {
+            text-align: center;
+          }
+        }
+
+        &__advantages {
+          .title {
+            text-align: center;
+          }
+
+          .advantages {
+            justify-content: center;
+          }
+        }
+      }
+    }
+  }
+}
+
+@media (max-width: 715px) {
+  .about {
+    &__box {
+      display: none;
+    }
+  }
+}
+
+@media (max-width: 415px) {
+  .about {
+    .about__inner-content__company {
+      img {
+        width: 300px;
+        height: 210px;
       }
     }
   }
